# yamp

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  style.tcss
style/: global.tcss
yamp/: fetch.py  layout.py  player.py  utils.py
yamp_py/: __init__.py
