[tool.poetry]
name = "yamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["./style/*", "main.py"]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.62.0"
pyfiglet = "^1.0.2"
requests = "^2.32.2"
wheel = "^0.43.0"
pydub = "^0.25.1"
sounddevice = "^0.4.6"
numpy = "^1.26.4"

[tool.poetry.scripts]
"yamp" = "main:run"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
